Fixed header/menu spacing

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ div.content  {
 
 img.logo {
     width: 100%;
-    max-width:1000px;
+    max-width:500px;
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -163,6 +163,8 @@ table.pure-table {
 
 .menu > ul {
     text-align: center;
+    padding: 0;
+    list-style-type: none;
 }
  
 .menu > ul > li:hover > a, .menu > ul > .current-item > a {
